<resources>
    <string name="app_name">Get Taxi</string>

    <string name="user_name">User name</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="password">Password</string>
    <string name="enter">Login</string>
    <string name="remember_me_later">Remember me</string>
    <string name="no_account_yet_create_one">No account yet? <u> Create one</u>.</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="id">ID</string>
    <string name="phone">phone</string>
    <string name="Email">Email</string>
    <string name="credit_card_number">Credit card number</string>

    <string name="create_an_account">Create an account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="created_successfully">The account was created successfully</string>
    <string name="error_creating_the_account">There was an error creating the account</string>
    <string name="save_Password">Save Password</string>
    <string name="Error_to_get_drivers_list">Error to get drivers list</string>
    <string name="Error_to_get_drives_list">Error to get drives list</string>
    <string name="not_found_user">The email or password does not exist in the system</string>
    <string name="menu">Menu</string>
    <string name="hello">Hello </string>
    <string name="Register">Register</string>
    <string name="log_in">log in</string>
    <string name="create_a_new_account_for_free">Create a new account now!</string>
    <string name="name">name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="add_to_contacts">add to contacts</string>
    <string name="your_drives">Your drives:</string>
    <string name="there_are_no_drives">There are no drives</string>
    <string name="start_driving">Start driving</string>
    <string name="finish_driving">Finish driving</string>
    <string name="start_point">start point</string>
    <string name="Have_a_nice_drive">Have a nice drive!</string>
    <string name="failure_update_drive">We could not start the trip.</string>
    <string name="please_finish_driving">Work status trip detected, please finish driving and then start another drive.</string>
    <string name="failureEndDrive">No trip found with work status</string>
    <string name="success_finish_drive">The trip is over, thank you</string>
    <string name="no_drive_selected">No drive selected</string>
    <string name="cant_find_your_location">can\'t find your location</string>
    <string name="select">Select</string>
    <string name="sort_by_km">Sort by KM</string>
    <string name="sort_by_city">Sort by city</string>
    <string name="no_drive_selected_show">There are no drive selected to show</string>
    <string name="select_distance">Select distance from you ( in KM)</string>
    <string name="Can_not_get">Can not get the list of the cities</string>
    <string name="cities">cities</string>
    <string name="the_drive_finish">The drive finish</string>
    <string name="location_services_impossible">Access to your location is not possible. Please check your location services and try again.</string>
    <string name="Start_time">Start time</string>
    <string name="New_drive_received">New trip received</string>
    <string name="notification_text_new_drive">Added a new trip.</string>
    <string name="big_text">You can launch the application and start driving</string>
    <string name="error_filter_by_km">Error filtering the trips according to km</string>
    <string name="sent_sms">Sent SMS</string>
    <string name="sms_body_come">I am coming to take you from:</string>
    <string name="smsto">smsto:</string>
    <string name="sms_body">sms_body</string>
    <string name="to">to:</string>
    <string name="title_activity_nav_drawer">Nav_drawer</string>
    <string name="title_section1">Show available drives</string>
    <string name="title_section2">Show my drives</string>
    <string name="title_section3">Logout</string>
    <string name="sent_email">Sent Email</string>
    <string name="subject_mail">The driver is coming to you!</string>
    <string name="show_the_trip_in_progress">Show the trip in progress</string>
    <string name="no_trip_progress">There is no trip in progress</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="open_web_browser">About as in a web browser</string>


</resources>
